--- a/paginainsta.html
+++ b/paginainsta.html
@@ -22,6 +22,10 @@
                 <img src="imagens/logo-insta.png" class="insta-logo" alt="logo instagram">
                 <div class="foto-perfi">
                     <img src="imagens/foto-perfil.jpg" class="foto-perfil" alt="foto-perfil">
+                    <img src="imagens/perfil2.jpg" class="foto-perfil" alt="foto-perfil1">
+                    <img src="imagens/perfil3.jpg" class="foto-perfil" alt="foto-perfil1">
+                    <img src="imagens/perfil4.jpg" class="foto-perfil" alt="foto-perfil1">
+                    <img src="imagens/perfil5.jpg" class="foto-perfil" alt="foto-perfil1">
                 </div>
                 <a href="#" class="insta-inicio">Continue como fabio.aragao</a>
                 <span class="link-blue">Alterar contas</span>
